# SARA-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md
Include/: Bitboard.hpp  Piece.hpp  Search.hpp
Include/Enums/: Color.hpp
Include/Structs/: Position.hpp  move.hpp
Src/: Bitboard.cpp
Tests/: bitboard_test.cpp
include/: Bitboard.hpp  Board.hpp  Evalulation.hpp  Game.hpp  JsonLoader.hpp  MagicBitboards.hpp  Move.hpp  MoveGenerator.hpp  MoveValidator.hpp  Piece.hpp  PrecomputedData.hpp  Utility.hpp
include/enums/: Color.hpp  GameState.hpp  PieceType.hpp  PromotionPiece.hpp  SpecialMove.hpp
include/structs/: CastleRights.hpp  Move.hpp  PieceList.hpp
src/: Bitboard.cpp  Board.cpp  Evalulation.cpp  Game.cpp  MagicBitboards.cpp  Move.cpp  MoveGenerator.cpp  MoveValidator.cpp  Piece.cpp  PrecomputedData.cpp  Search.cpp  Utility.cpp  main.cpp
src/PrecomputedValues/: bishopAttacks.txt  bishopMagics.json  bishopMagics.txt  bishopMasks.txt  bishopShifts.txt  blackPawnAttacks.txt  kingAttacks.txt  knightAttacks.txt  rookAttacks.txt  rookMagics.txt  rookMasks.txt  rookShifts.txt  whitePawnAttacks.json  whitePawnAttacks.txt
src/data/: bishopAttacks.json  bishopMasks.json  bishopShifts.json  blackPawnAttacks.json  kingAttacks.json  knightAttacks.json  rookAttacks.json  rookMagics.json  rookMasks.json  rookShifts.json
tests/: bitboard_test.cpp  board_test.cpp  game_test.cpp  magicBitboards_test.cpp  magic_bitboards.cpp  moveGenerator_test.cpp  moveValidator_test.cpp  move_test.cpp
